feat(Lotto): 변환 시 오름차순 정렬 로직 구현